# ipcsystools

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  autogen.sh  bootstrap.sh  config.h  config.status  configure  configure.ac  configure.in  ipcsystools-deploy.sh  ipcsystools-release  ipcsystools.geany  ipcsystools_2011.11.17.orig.tar.gz.delta  ipcsystools_2011.11.17.orig.tar.gz.id  ipcsystools_2011.11.18.orig.tar.gz.delta  ipcsystools_2011.11.18.orig.tar.gz.id  ipcsystools_2012.03.14.orig.tar.gz.delta  ipcsystools_2012.03.14.orig.tar.gz.id  ipcsystools_2012.06.06.orig.tar.gz.delta  ipcsystools_2012.06.06.orig.tar.gz.id  ipcsystools_2012.06.15.orig.tar.gz.delta  ipcsystools_2012.06.15.orig.tar.gz.id  ipcsystools_2012.08.28.orig.tar.gz.delta  ipcsystools_2012.08.28.orig.tar.gz.id  ipcsystools_2012.10.02.orig.tar.gz.delta  ipcsystools_2012.10.02.orig.tar.gz.id  ipcsystools_2013.11.14.orig.tar.gz.delta  ipcsystools_2013.11.14.orig.tar.gz.id  ipcsystools_2016.01.26.orig.tar.gz.delta  ipcsystools_2016.01.26.orig.tar.gz.id  libtool  ltmain.sh  mcbsystools-deploy.sh
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
debian/: changelog  control  copyright  gbp.conf  init  ipcsystools.service  ipcsystools.udev  postinst  postrm  preinst  prerm  rules
src/: Makefile.am  Makefile.in
src/commonlib/: Makefile.am  Makefile.in  bstrlib.c  bstrlib.h  inifile.c  inifile.h  libbinblob.c  libbinblob.h  lockfile.c  lockfile.h  modem.c  modem.h  udp.c  udp.h  watchdog.c  watchdog.h
src/etc/: Makefile.am  Makefile.in  ipcsystools.conf  ipcsystools.conf.eth-only  ipcsystools.conf.eth-umts-fallback  ipcsystools.conf.umts-only  mcbctl.conf  mcbctl.conf.umts-only  mcbctl.conf.utms-only
src/etc/cron.d/: ipcsystools
src/etc/if-down.d/: 01-3g-led-off  01-ipc-led-off  50_ipsec-down  50_openvpn-down
src/etc/if-pre-up.d/: 01-3g-led-blink  01-ipc-led-blink
src/etc/if-up.d/: 01-3g-led-on  01-ipc-led-on  50_ipsec-up  50_openvpn-up
src/etc/init/: ipc-shutdown.conf  ipc-startup.conf
src/etc/init.d/: ipc-shutdown  ipc-startup  mcb-shutdown  mcb-startup
src/etc/mcb/: default-sim.conf
src/etc/ppp/: 01-3g-led-off  01-3g-led-on  50_ipsec-down  50_openvpn-down  50_openvpn-up
src/etc/ppp/ip-down.d/: 50_ipsec-down  50_openvpn-down
src/etc/ppp/ip-up.d/: 01-3g-led-on  50_ipsec-up  50_openvpn-up
src/etc/udev/rules.d/: 40-sierra-umts.rules
src/include/: types.h  version.h
src/ipcsystools/: connection-eth.sh  dip-mode.chat  ipc-cronjobs.sh  ipc-reportstatus.man  ipc-shutdown  msvpn_updown  sierra-dip-enable.chat
src/lib/: Makefile.am  bstrlib.h  inifile.c  inifile.h  lockfile.c  lockfile.h  modem.c  udp.h  watchdog.c
src/mssvpn/: firewall-mssvpn.sh  ipsec-monitor.sh  ipsec.conf  msvpn_updown
src/scripts/: Makefile.am  asciimsg.script  ipc-getfirmware  ipc-getfirmware.man  ipc-getgpslongitude.man  ipc-getgpssatinfo  ipc-getgpssatinfo.man  ipc-getgpstime  ipc-getgpstime.man  ipc-getgsmcellid  ipc-getgsmcellid.man  ipc-getgsmfs  ipc-getgsmlac  ipc-getgsmlac.man  ipc-getgsmmode  ipc-getgsmroaming.man  ipc-getipdez.man  mcb2msg1.script  mcb2msg4.script  statusmsg.script
src/service/: Makefile.am  connection-dip.sh  connection-mmgr.sh  connection-ppp.sh  gps-monitor.man  ipc-reportstatus  ipc-shutdown  ipc-shutdown.man  ipc-umts-op.man  ipclib.inc  options.ppp
src/umtscardtool/: Makefile.am  ni.h  pin.c  umtscardtool.h  umtscardtool.man
src/utils/: Makefile.am  Makefile.in
src/utils/binblob/: Makefile.am  binblob.c  binblob.man  libbinblob.c
src/utils/binblob/scripts/: Makefile.am  getfirmware.sh  getgpslongitude.sh  getgpssatinfo.sh  getgpstime.sh  getgsmcellid.sh  getgsmlac.sh  getgsmmode.sh  getgsmplmn.sh  getgsmroaming.sh  gettemp.sh  ipc-getfirmware.man  ipc-getgpslatitude  ipc-getgpslatitude.man  ipc-getgpslongitude  ipc-getgpslongitude.man  ipc-getgpssatinfo  ipc-getgpssatinfo.man  ipc-getgpstime.man  ipc-getgsmcellid.man  ipc-getgsmfs.man  ipc-getgsmlac.man  ipc-getgsmmode  ipc-getgsmmode.man  ipc-getgsmplmn  ipc-getgsmplmn.man  ipc-getgsmroaming  ipc-getgsmroaming.man  ipc-getipdez  ipc-getipdez.man  ipc-gettemp.man  ipc_getgpstime  ipc_getgsmfs  mcb2msg1.script  mcb2msg2.script  mcb2msg3.script  mcb2msg4.script  mcb2msg5.script
src/utils/scripts/: Makefile  Makefile.am  Makefile.in  checkconnection.sh  connection-dip.sh  connection-eth.sh  connection-lte.sh  connection-mmgr.sh  connection-ppp.sh  connection-pppoe.sh  connection-umts.sh  dip-mode.chat  dip-umts.chat  eth-connection.sh  firewall-down  firewall-up  firewall.sh  fs.sh  gps-monitor  gps-monitor.man  gps-monitor.sh  ipc-control  ipc-control.man  ipc-cronjobs.sh  ipc-initsystem.sh  ipc-monitor  ipc-monitor.man  ipc-monitor.sh  ipc-reportstatus  ipc-reportstatus.sh  ipc-service  ipc-service.man  ipc-shutdown  ipc-shutdown.man  ipc-startup  ipc-startup.man  ipc-umts-fs  ipc-umts-fs.man  ipc-umts-ni.man  ipc-umts-op.man  (+24 more)
src/utils/umtscardtool/: Makefile.am  Makefile.in  customcmd.c  fs.c  fs_ping.c  ni.c  ni.h  pin.c  setop.c  setop.h  umtscardtool.c  umtscardtool.h  umtscardtool.man
systemd/: ipcsystools-monitor.service  ipcsystools-monitor.timer  ipcsystools.service
