# Process this file with autoconf to produce a configure script.

AC_INIT([mcbsystools],[1.0])
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign])

AC_PREFIX_DEFAULT(/usr)

AC_LANG([C])
AC_PROG_CC
LT_INIT

AC_SEARCH_LIBS([strerror],[cposix])
AC_PROG_CC
AC_HEADER_STDC

AC_PROG_CPP

LT_INIT

AC_CONFIG_FILES([
Makefile
src/Makefile
src/commonlib/Makefile
src/utils/Makefile
src/utils/scripts/Makefile
src/utils/umtscardtool/Makefile
src/etc/Makefile
])
AC_OUTPUT

