## Process this file with automake to produce Makefile.in

bin_SCRIPTS = \
	getfirmware.sh  \
	getgpslatitude.sh       \
	getgpslongitude.sh      \
	getgpssatinfo.sh        \
	getgpstime.sh   \
	getgsmcellid.sh \
	getgsmfs.sh     \
	getgsmlac.sh    \
	getgsmmode.sh   \
	getgsmplmn.sh   \
	getgsmroaming.sh        \
	getipdez.sh     \
	gettemp.sh      

DISTCLEANFILES = Makefile.in

nobase_dist_pkgdata_DATA = \
	asciimsg.script \
	mcb2msg1.script \
	mcb2msg2.script \
	mcb2msg3.script \
	mcb2msg4.script \
	mcb2msg5.script
	
#devel:	statusmsg.script 
