## Process this file with automake to produce Makefile.in

bin_SCRIPTS = \
	ipc_getfirmware  \
	ipc_getgpslatitude       \
	ipc_getgpslongitude      \
	ipc_getgpssatinfo        \
	ipc_getgpstime   \
	ipc_getgsmcellid \
	ipc_getgsmfs     \
	ipc_getgsmlac    \
	ipc_getgsmmode   \
	ipc_getgsmplmn   \
	ipc_getgsmroaming        \
	ipc_getipdez     \
	ipc_gettemp      

DISTCLEANFILES = Makefile.in

nobase_dist_pkgdata_DATA = \
	asciimsg.script \
	mcb2msg1.script \
	mcb2msg2.script \
	mcb2msg3.script \
	mcb2msg4.script \
	mcb2msg5.script
	
#devel:	statusmsg.script 
